feat: persist workload empty dirs and remove deployments
