# api/openapi/swagger.json
@@ -2844,6 +2844,12 @@
                 "deleted_at": {
                     "type": "string"
                 },
+                "empty_dirs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadEmptyDir"
+                    }
+                },
                 "env": {
                     "type": "array",
                     "items": {
@@ -2891,6 +2897,12 @@
                 "application_id": {
                     "type": "string"
                 },
+                "empty_dirs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadEmptyDir"
+                    }
+                },
                 "env": {
                     "type": "array",
                     "items": {
@@ -2916,6 +2928,23 @@
                     "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadResourceRequirements"
                 },
                 "service_account_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadEmptyDir": {
+            "type": "object",
+            "properties": {
+                "medium": {
+                    "type": "string"
+                },
+                "mount_path": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "size_limit": {
                     "type": "string"
                 }
             }
@@ -4125,6 +4154,12 @@
                     "type": "object",
                     "additionalProperties": {
                         "type": "string"
+                    }
+                },
+                "empty_dirs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadEmptyDir"
                     }
                 },
                 "env": {
