# internal/workloadconfig/transport/http/handler.go
@@ -63,6 +63,7 @@ func (h *Handler) CreateWorkloadConfig(c *gin.Context) {
 		Resources:          req.Resources,
 		Probes:             req.Probes,
 		Metrics:            req.Metrics,
+		EmptyDirs:          req.EmptyDirs,
 		Env:                req.Env,
 		Labels:             req.Labels,
 		Annotations:        req.Annotations,
@@ -123,6 +124,7 @@ func (h *Handler) UpdateWorkloadConfig(c *gin.Context) {
 		Resources:          req.Resources,
 		Probes:             req.Probes,
 		Metrics:            req.Metrics,
+		EmptyDirs:          req.EmptyDirs,
 		Env:                req.Env,
 		Labels:             req.Labels,
 		Annotations:        req.Annotations,
